--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,12 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+	  <groupId>javax.servlet</groupId>
+	  <artifactId>javax.servlet-api</artifactId>
+      <version>3.0.1</version>
+	</dependency>
   </dependencies>
 
   <properties>
@@ -22,34 +28,21 @@
 
   <build>
     <finalName>docker-demo-java-tomcat</finalName>
-    <!--
-    <plugins>
-      <plugin>
-      	<groupId>com.spotify</groupId>
-      	<artifactId>docker-maven-plugin</artifactId>
-      	<version>0.3.6</version>
-      	<executions>
-      		<execution>
-      			<phase>package</phase>
-      			<goals>
-      				<goal>build</goal>
-      			</goals>
-      		</execution>
-      	</executions>
-      	<configuration>
-      	<imageName>${docker.image.prefix}/${project.artifactId}</imageName>
-      	<dockerDirectory>${project.basedir}/src/main/docker</dockerDirectory>
-      	<resources>
-      		<resource>
-      			<targetPath>/</targetPath>
-      			<directory>${project.build.directory}</directory>
-      			<include>${project.build.finalName}.war</include>
-      		</resource>
-      	</resources>
-      	</configuration>
-      </plugin>
-    </plugins>
-    -->
-  </build>
+    
+  	<plugins>
 
+		<plugin>
+
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-compiler-plugin</artifactId>
+
+		<configuration>
+		<source>1.8</source>
+		<target>1.8</target>
+		</configuration>
+
+		</plugin>
+
+	</plugins>
+  </build>
 </project>
