local to current

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,18 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-<web-app>
+<?xml version="1.0"?>
+<web-app version="3.0">
   <display-name>Archetype Created Web Application</display-name>
+  
+    <welcome-file-list>
+     	<welcome-file>EntryServlet</welcome-file>
+    	<welcome-file>index.jsp</welcome-file>      
+    </welcome-file-list>
+ 
+    <servlet>
+        <servlet-name>EntryServlet</servlet-name>
+        <servlet-class>Servlet.EntryServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>EntryServlet</servlet-name>
+        <url-pattern>/EntryServlet</url-pattern>
+    </servlet-mapping>
 </web-app>
