--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
  
     <servlet>
         <servlet-name>EntryServlet</servlet-name>
-        <servlet-class>Servlet.EntryServlet</servlet-class>
+        <servlet-class>wechat.Servlet.EntryServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>EntryServlet</servlet-name>
