--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,11 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>wechat</groupId>
-  <artifactId>docker_demo_java_tomcat</artifactId>
+  <artifactId>server</artifactId>
   <packaging>war</packaging>
+  <properties>
+      <failOnMissingWebXml>false</failOnMissingWebXml>
+  </properties>
   <version>0.0.1-SNAPSHOT</version>
   <name>Server Maven Webapp</name>
   <url>http://maven.apache.org</url>
